controls/C-0062/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0062-deny-resources-having-containers-with-sudo-in-entrypoint"
  labels:
    controlId: "C-0062"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0062/"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: "object.kind != 'Pod' || object.spec.containers.all(container, !(has(container.command)) || container.command.all(cmd, cmd != 'sudo'))"
      message: "Pod has a container/s having sudo in entrypoint! (see more at https://kubescape.io/docs/controls/c-0062/)"
    - expression: "['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) || object.spec.template.spec.containers.all(container, !(has(container.command)) || container.command.all(cmd, cmd != 'sudo'))"
      message: "Workload has a container/s having sudo in entrypoint! (see more at https://kubescape.io/docs/controls/c-0062/)"
    - expression: "object.kind != 'CronJob' || object.spec.jobTemplate.spec.template.spec.containers.all(container, !(has(container.command)) || container.command.all(cmd, cmd != 'sudo'))"
      message: "CronJob has a container/s having sudo in entrypoint! (see more at https://kubescape.io/docs/controls/c-0062/)"
